--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,10 @@
 	};
 	</script>
 
-	<button id="classify">Classify</button>
-	<h2 id="result"></h2>
-
+	<form method="POST">
+		<button id="classify">Classify</button>
+		<h2 id="result"></h2>
+	</form>
 
 </body>
 </html>
