change type error

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fasion MNIST Classifier</title>
+	<title>Fashion MNIST Classifier</title>
 	<!-- <link rel="stylesheet" link href="/static/css/base.css"> -->
 	<!-- <link rel="stylesheet" link href="styles/homeStyles.css"> -->
 	<!-- <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/homeStyles.css') }}"> -->
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-	<h1><CENTER>Fasion MNIST Classifier</CENTER></h1>
+	<h1><CENTER>Fashion MNIST Classifier</CENTER></h1>
 
 	<!-- <form action="upload.php" method="post" enctype="multipart/form-data">
     Select image to upload:
