--- a/static/resultStyles.css
+++ b/static/resultStyles.css
@@ -1,9 +1,22 @@
 h1 {
 	/*color: white; */
 	font-size:48px;
+	color: white;
+
+}
+/*body {
+		  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('runaway.jpg');
+}*/
+
+
+body {
+	background:  linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('static/runaway.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 .result {
 	font-size:24px;
+	color: white;
 	text-align: center;
 	/*border: 3px solid green;*/
 }
